--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "devDependencies": {
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "nodemon": "^3.1.11",
     "prettier": "^3.8.0"
+  },
+  "script": {
+    "start": "node server.js"
   }
 }
