--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -26,8 +27,5 @@
     "eslint-config-prettier": "^10.1.8",
     "nodemon": "^3.1.11",
     "prettier": "^3.8.0"
-  },
-  "script": {
-    "start": "node server.js"
   }
 }
